--- a/movies.css
+++ b/movies.css
@@ -21,14 +21,21 @@ body {
   color: #ffffff;
   font-size: 3rem;
   font-weight: 700;
+  padding: 2rem 0;
 }
 .header__control {
   display: flex;
   align-items: center;
+  gap: 1rem;
 }
 .header__search {
   color: #ffffff;
   text-decoration: none;
+}
+.header__image {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
 }
 .header__form {
   padding-bottom: 1rem;
@@ -46,4 +53,57 @@ body {
 }
 .header__random {
   background-color: #ffffff;
+}
+
+.search {
+  padding: 2rem;
+}
+.search__form {
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.search__field {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.search__input {
+  padding: 0.5rem;
+}
+.search__filters {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.search__button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+}
+.search__random {
+  padding: 0.5rem 1rem;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.movies__title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+  padding: 2rem 0;
+}
+
+h1 {
+  padding: 1rem 0;
+}
+
+.popular__movies {
+  padding: none;
+}
+
+.title {
+  font-size: 0.5rem;
+  padding-top: 2rem;
 }/*# sourceMappingURL=movies.css.map */
