--- a/movies.scss
+++ b/movies.scss
@@ -1,6 +1,7 @@
 @use "./partials/global" as *;
 @use "./partials/mixins" as *;
 
+
 .header {
   background-color: #212529;
   display: flex;
@@ -11,16 +12,24 @@
     color: #ffffff;
     font-size: 3rem;
     font-weight: 700;
+    padding: 2rem 0;
   }
 
   &__control {
     display: flex;
     align-items: center;
+    gap: 1rem;
   }
 
   &__search {
     color: #ffffff;
     text-decoration: none;
+  }
+
+  &__image {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
   }
 
 
@@ -46,4 +55,70 @@
   &__random {
     background-color: #ffffff;
   }
+}
+
+
+.search {
+  padding: 2rem;
+
+  &__form {
+    padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__field {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  &__input {
+    padding: 0.5rem;
+  }
+
+  &__filters {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  &__button {
+    // background-color: blue;
+    // color: $white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+  }
+
+  &__random {
+    // background-color: $white;
+    padding: 0.5rem 1rem;
+    border: 1px solid #d1d1d1;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+}
+
+.movies {
+  &__title {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+    padding: 2rem 0;
+    // padding-top: 1rem;
+  }
+}
+
+h1 {
+  padding: 1rem 0;
+}
+
+.popular__movies {
+  padding: none;
+}
+
+.title {
+  font-size: 0.5rem;
+  padding-top: 2rem;
 }
